--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "webpack": "^1.12.9"
   },
   "dependencies": {
-    "react": "^0.14.5"
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "babel-core": "^6.5.1"
   }
 }
