--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "babel-core": "^6.5.1"
+    "babel-core": "^6.5.1",
+    "react-dropdown": "^0.7.2",
+    "style-loader": "^0.13.0",
+    "css-loader": "^0.23.1"
   }
 }
