--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-core": "^6.5.1",
     "react-dropdown": "^0.7.2",
     "style-loader": "^0.13.0",
-    "css-loader": "^0.23.1"
+    "css-loader": "^0.23.1",
+    "classnames": "^2.2.3"
   }
 }
