--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dropdown": "^0.7.2",
     "style-loader": "^0.13.0",
     "css-loader": "^0.23.1",
-    "classnames": "^2.2.3"
+    "classnames": "^2.2.3",
+    "lodash": "^4.5.1"
   }
 }
