--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "style-loader": "^0.13.0",
     "css-loader": "^0.23.1",
     "classnames": "^2.2.3",
-    "lodash": "^4.5.1"
+    "lodash": "^4.5.1",
+    "react-tabs": "^0.5.3"
   }
 }
